force-app/main/default/objects/Partnership_Objective__c/fields/Performance_Objective_Health__c.field-meta.xml
<CustomField>
    <fullName>Performance_Objective_Health__c</fullName>
    <inlineHelpText>Please use the Update Objective Health button (top right) to update this field.</inlineHelpText>
    <label>Partnership Objective Health</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <color>#999999</color>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Off Track</fullName>
                <color>#CC0000</color>
                <label>Off Track</label>
            </value>
            <value>
                <fullName>At Risk</fullName>
                <color>#FF6600</color>
                <label>At Risk</label>
            </value>
            <value>
                <fullName>On Track</fullName>
                <color>#33CC00</color>
                <label>On Track</label>
            </value>
            <value>
                <fullName>Objective Not Met</fullName>
                <color>#660000</color>
                <label>Objective Not Met</label>
            </value>
            <value>
                <fullName>Successful</fullName>
                <color>#009900</color>
                <label>Successful</label>
            </value>
            <value>
                <fullName>Exceeded Expectations</fullName>
                <color>#006600</color>
                <label>Exceeded Expectations</label>
            </value>
            <value>
                <fullName>Incorrect Hypothesis</fullName>
                <isActive>false</isActive>
                <label>Incorrect Hypothesis</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
                <isActive>false</isActive>
                <label>On Hold</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>