force-app/main/default/objects/Partnership_Objective__c/fields/Performance_Objective_Health_Updated__c.field-meta.xml
<CustomField>
    <fullName>Performance_Objective_Health_Updated__c</fullName>
    <description>Timestamp for the last time Performance Objective Health was updated.</description>
    <inlineHelpText>Timestamp for the last time Performance Objective Health was updated.</inlineHelpText>
    <label>Partnership Objective Health Updated</label>
    <type>DateTime</type>
</CustomField>