force-app/main/default/objects/Partnership_Objective__c/fields/Pillar__c.field-meta.xml
<CustomField>
    <fullName>Pillar__c</fullName>
    <description>This field should indicate the Commercial Pillar this Partnership Objective is tied to. Since some Accounts have multi-Pillar Opportunities, this can most commonly be thought of as the PM&apos;s assigned Pillar</description>
    <inlineHelpText>This field should indicate the Commercial Pillar this Partnership Objective is tied to. Since some Accounts have multi-Pillar Opportunities, this can most commonly be thought of as the PM&apos;s assigned Pillar</inlineHelpText>
    <label>Pillar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ecosystem</fullName>
            </value>
            <value>
                <fullName>Liquidity</fullName>
            </value>
            <value>
                <fullName>Platform Distribution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>