force-app/main/default/objects/Partnership_Objective__c/fields/Primary_Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Deal_Type__c</fullName>
    <label>Primary Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Products</fullName>
            </value>
            <value>
                <fullName>Growth Partnerships</fullName>
            </value>
            <value>
                <fullName>Channel Partnerships</fullName>
            </value>
            <value>
                <fullName>Blockchain Partnerships</fullName>
            </value>
            <value>
                <fullName>Product Integrations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>