force-app/main/default/objects/Partnership_Objective__c/fields/Priorities__c.field-meta.xml
<CustomField>
    <fullName>Priorities__c</fullName>
    <inlineHelpText>What are the most important initiatives to continue growing the partnership?</inlineHelpText>
    <label>Priorities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>