force-app/main/default/objects/Partnership_Objective__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <description>This information is derived from the Opportunity.</description>
    <formula>IF(!ISBLANK(Opportunity__c),SUBSTITUTE(Opportunity__r.Products_Selected__c,&apos;;&apos;,&apos;, &apos;),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This information is derived from the Opportunity.</inlineHelpText>
    <label>Products</label>
    <type>Text</type>
</CustomField>