force-app/main/default/objects/Partnership_Objective__c/fields/Projected_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Projected_Metrics__c</fullName>
    <label>Projected Metrics</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>