force-app/main/default/objects/Partnership_Objective__c/fields/Projected_MeWs__c.field-meta.xml
<CustomField>
    <fullName>Projected_MeWs__c</fullName>
    <description>Projected number of MeWs from the Partnership Construct.</description>
    <inlineHelpText>Projected number of MeWs from the Partnership Construct.</inlineHelpText>
    <label>Projected MeWs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>