force-app/main/default/objects/Partnership_Objective__c/fields/Projected_MeWs_Growth__c.field-meta.xml
<CustomField>
    <fullName>Projected_MeWs_Growth__c</fullName>
    <description>Projected incremental MeWs added during the timeframe of the objective</description>
    <inlineHelpText>Projected incremental MeWs added during the timeframe of the objective</inlineHelpText>
    <label>Projected MeWs Growth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>