force-app/main/default/objects/Partnership_Objective__c/fields/Projected_Other_Custom_Metric__c.field-meta.xml
<CustomField>
    <fullName>Projected_Other_Custom_Metric__c</fullName>
    <description>Populated by the PM as a result of an &quot;Other&quot; success metric from the opportunity.</description>
    <inlineHelpText>Populated by the PM as a result of an &quot;Other&quot; success metric from the opportunity.</inlineHelpText>
    <label>Projected Custom Metric</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>