force-app/main/default/objects/Partnership_Objective__c/fields/Projected_Stablecoin_On_Platform_Growth__c.field-meta.xml
<CustomField>
    <fullName>Projected_Stablecoin_On_Platform_Growth__c</fullName>
    <description>Projected incremental stablecoin on platform growth during the timeframe of the objective</description>
    <inlineHelpText>Projected incremental stablecoin on platform growth during the timeframe of the objective</inlineHelpText>
    <label>Projected Stablecoin On Platform Growth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>