force-app/main/default/objects/Partnership_Objective__c/fields/Projected_Total_Stablecoin_Volume__c.field-meta.xml
<CustomField>
    <fullName>Projected_Total_Stablecoin_Volume__c</fullName>
    <description>Projected aggregate stablecoin transaction volume during the timeframe of the objective</description>
    <inlineHelpText>Projected aggregate stablecoin transaction volume during the timeframe of the objective</inlineHelpText>
    <label>Projected Total Stablecoin Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>