force-app/main/default/objects/Partnership_Objective__c/fields/Projected_Transaction_Volume__c.field-meta.xml
<CustomField>
    <fullName>Projected_Transaction_Volume__c</fullName>
    <description>Projected stablecoin volume in the last month of the engagement</description>
    <inlineHelpText>Projected stablecoin volume in the last month of the engagement</inlineHelpText>
    <label>Projected Transaction Volume_DNU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>