force-app/main/default/objects/Partnership_Objective__c/fields/Projected_USDC_on_Platform__c.field-meta.xml
<CustomField>
    <fullName>Projected_USDC_on_Platform__c</fullName>
    <description>Projected total amount of USDC held on platform from the Partnership Construct.</description>
    <inlineHelpText>Projected total amount of USDC held on platform from the Partnership Construct.</inlineHelpText>
    <label>Projected USDC On Platform_DNU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>