force-app/main/default/objects/Partnership_Objective__c/fields/Related_Metrics_Objective__c.field-meta.xml
<CustomField>
    <fullName>Related_Metrics_Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Will pull in data from the related Metrics objective tied to this relationship.</description>
    <inlineHelpText>Will pull in data from the related Metrics objective tied to this relationship.</inlineHelpText>
    <label>Related Metrics Objective_DNU</label>
    <referenceTo>Partnership_Objective__c</referenceTo>
    <relationshipLabel>Partnership Objectives</relationshipLabel>
    <relationshipName>Partnership_Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>