force-app/main/default/objects/Partnership_Objective__c/fields/Report_to_Post_Deal_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>Report_to_Post_Deal_Dashboard__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Partner Managers to include a specific Partnership Objective in the Post-Deal Dashboard for BLT and ELT</description>
    <inlineHelpText>Used by Partner Managers to include a specific Partnership Objective in the Post-Deal Dashboard for BLT and ELT</inlineHelpText>
    <label>Report to Post-Deal Dashboard</label>
    <type>Checkbox</type>
</CustomField>