force-app/main/default/objects/Partnership_Objective__c/fields/Solutions_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Solutions_Engineer__c</fullName>
    <description>Solutions Engineer from the related Account.</description>
    <formula>Account__r.Solutions_Engineer__r.FirstName + &quot; &quot; + Account__r.Solutions_Engineer__r.LastName</formula>
    <inlineHelpText>Solutions Engineer from the related Account.</inlineHelpText>
    <label>Solutions Engineer</label>
    <type>Text</type>
</CustomField>