force-app/main/default/objects/Partnership_Objective__c/fields/Stablecoin__c.field-meta.xml
<CustomField>
    <fullName>Stablecoin__c</fullName>
    <description>This field should indicate USDC in most cases, but for certain opportunities, the Partnership Objective will focus on the growth of EUROC or other stablecoins in the future</description>
    <inlineHelpText>This field should indicate USDC in most cases, but for certain opportunities, the Partnership Objective will focus on the growth of EUROC or other stablecoins in the future</inlineHelpText>
    <label>Stablecoin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USDC</fullName>
            </value>
            <value>
                <fullName>EURC</fullName>
            </value>
            <value>
                <fullName>EUROC</fullName>
                <isActive>false</isActive>
                <label>EUROC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>