force-app/main/default/objects/Partnership_Objective__c/fields/Stablecoin_On_Platform_Attainment__c.field-meta.xml
<CustomField>
    <fullName>Stablecoin_On_Platform_Attainment__c</fullName>
    <formula>IF(AND(!ISBLANK(Projected_Stablecoin_On_Platform_Growth__c), !ISBLANK(Stablecoin_On_Platform_Growth__c)), Stablecoin_On_Platform_Growth__c / Projected_Stablecoin_On_Platform_Growth__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stablecoin On Platform Attainment %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>