force-app/main/default/objects/Partnership_Objective__c/fields/Stablecoin_On_Platform_Growth__c.field-meta.xml
<CustomField>
    <fullName>Stablecoin_On_Platform_Growth__c</fullName>
    <description>Incremental stablecoin balance added since the start of the objective</description>
    <formula>IF(
   AND(!ISBLANK(Current_Stablecoin_Liquidity__c), !ISBLANK(Starting_Stablecoin_Liquidity__c)),
   Current_Stablecoin_Liquidity__c -  Starting_Stablecoin_Liquidity__c
   ,
   null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Incremental stablecoin balance added since the start of the objective</inlineHelpText>
    <label>Stablecoin On Platform Growth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>