force-app/main/default/objects/Partnership_Objective__c/fields/Stablecoin_On_Pltfrm_Timeframe_months__c.field-meta.xml
<CustomField>
    <fullName>Stablecoin_On_Pltfrm_Timeframe_months__c</fullName>
    <label>Stablecoin On Pltfrm Timeframe (months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>