force-app/main/default/objects/Partnership_Objective__c/fields/Stablecoin_Volume_Attainment__c.field-meta.xml
<CustomField>
    <fullName>Stablecoin_Volume_Attainment__c</fullName>
    <formula>IF(AND(!ISBLANK(Projected_Total_Stablecoin_Volume__c), !ISBLANK(Stablecoin_Volume_Growth__c)), Stablecoin_Volume_Growth__c / Projected_Total_Stablecoin_Volume__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stablecoin Volume Attainment %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>