force-app/main/default/objects/Partnership_Objective__c/fields/Stablecoin_Volume_Growth__c.field-meta.xml
<CustomField>
    <fullName>Stablecoin_Volume_Growth__c</fullName>
    <formula>IF(
   AND(!ISBLANK(Current_Stablecoin_Volume__c), !ISBLANK(Starting_Stablecoin_Volume__c)),
   Current_Stablecoin_Volume__c -  Starting_Stablecoin_Volume__c,
   null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stablecoin Volume Growth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>