force-app/main/default/objects/Partnership_Objective__c/fields/Stablecoin_Volume_Timeframe_in_months__c.field-meta.xml
<CustomField>
    <fullName>Stablecoin_Volume_Timeframe_in_months__c</fullName>
    <label>Stablecoin Volume Timeframe (in months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>