force-app/main/default/objects/Partnership_Objective__c/fields/Stablecoins_Issued__c.field-meta.xml
<CustomField>
    <fullName>Stablecoins_Issued__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by PMs to categorize objectives</description>
    <inlineHelpText>Please see the Guru card - Primary Objectives Guidance for PMs</inlineHelpText>
    <label>Stablecoins Issued</label>
    <type>Checkbox</type>
</CustomField>