force-app/main/default/objects/Partnership_Objective__c/fields/Starting_MEWs__c.field-meta.xml
<CustomField>
    <fullName>Starting_MEWs__c</fullName>
    <description>This field should include the number of meaningful wallets prior to any incentive deal</description>
    <inlineHelpText>This field should include the number of meaningful wallets prior to any incentive deal</inlineHelpText>
    <label>Starting MEWs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>