force-app/main/default/objects/Partnership_Objective__c/fields/Starting_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Starting_Referrals__c</fullName>
    <label>Starting Referrals_DNU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>