force-app/main/default/objects/Partnership_Objective__c/fields/Starting_Stablecoin_Liquidity__c.field-meta.xml
<CustomField>
    <fullName>Starting_Stablecoin_Liquidity__c</fullName>
    <description>Total amount of USDC held on platform at the Objective Start Date.</description>
    <inlineHelpText>Total amount of USDC held on platform at the Objective Start Date.</inlineHelpText>
    <label>Starting Stablecoins on Platform</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>