force-app/main/default/objects/Partnership_Objective__c/fields/Starting_Stablecoin_Volume__c.field-meta.xml
<CustomField>
    <fullName>Starting_Stablecoin_Volume__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Average monthly Stablecoin transaction volume</description>
    <inlineHelpText>Average monthly Stablecoin transaction volume</inlineHelpText>
    <label>Starting Stablecoin Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>