force-app/main/default/objects/Partnership_Objective__c/fields/Starting_Stablecoins_Issued__c.field-meta.xml
<CustomField>
    <fullName>Starting_Stablecoins_Issued__c</fullName>
    <label>Starting Stablecoins Issued</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>