force-app/main/default/objects/Partnership_Objective__c/fields/Success_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Success_Metrics__c</fullName>
    <description>These are the metrics from the Partnership Construct by which we will determine the success of the Opportunity.</description>
    <formula>IF(
   AND(
      !ISBLANK(Opportunity__c),
      !ISBLANK(Opportunity__r.Success_Metrics__c)
   ),
   LEFT(
      IF ( INCLUDES ( Opportunity__r.Success_Metrics__c , &quot;MEWs&quot; ), &quot;MEWs, &quot;,null ) &amp;
      IF ( INCLUDES ( Opportunity__r.Success_Metrics__c , &quot;USDC On Platform&quot; ), &quot;USDC On Platform, &quot;,null ) &amp;
      IF ( INCLUDES ( Opportunity__r.Success_Metrics__c , &quot;Transaction Volume&quot; ), &quot;Transaction Volume, &quot;,null ) &amp;
      IF ( INCLUDES ( Opportunity__r.Success_Metrics__c , &quot;Other&quot; ), &quot;Other, &quot;,null),
      LEN(
         IF( INCLUDES ( Opportunity__r.Success_Metrics__c , &quot;MEWs&quot; ), &quot;MEWs, &quot;,null ) &amp;
         IF ( INCLUDES ( Opportunity__r.Success_Metrics__c , &quot;USDC On Platform&quot; ), &quot;USDC On Platform, &quot;,null ) &amp;
         IF ( INCLUDES ( Opportunity__r.Success_Metrics__c , &quot;Transaction Volume&quot; ), &quot;Transaction Volume, &quot;,null ) &amp;
         IF ( INCLUDES ( Opportunity__r.Success_Metrics__c , &quot;Other&quot; ), &quot;Other, &quot;,null)
      )-2
   )
,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>These are the metrics from the Partnership Construct by which we will determine the success of the Opportunity.</inlineHelpText>
    <label>Success Metrics</label>
    <type>Text</type>
</CustomField>