force-app/main/default/objects/Partnership_Objective__c/fields/Success_Metrics_Details__c.field-meta.xml
<CustomField>
    <fullName>Success_Metrics_Details__c</fullName>
    <description>Alternative metrics defined in the Partnership Construct that do no fit within our predefined templates.</description>
    <inlineHelpText>Alternative metrics defined in the Partnership Construct that do no fit within our predefined templates.</inlineHelpText>
    <label>Success Metrics Details</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>