force-app/main/default/objects/Partnership_Objective__c/fields/Success_Metrics_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Success_Metrics_Tracking__c</fullName>
    <label>Success Metrics Tracking</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>