force-app/main/default/objects/Partnership_Objective__c/fields/Successes__c.field-meta.xml
<CustomField>
    <fullName>Successes__c</fullName>
    <inlineHelpText>What is going well with the relationship?</inlineHelpText>
    <label>Successes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>