force-app/main/default/objects/Partnership_Objective__c/fields/Time_Horizon__c.field-meta.xml
<CustomField>
    <fullName>Time_Horizon__c</fullName>
    <description>Short - We expect to realize the Partnership Construct’s Objective in under 6 months.
Medium - We expect to realize the Partnership Construct’s Objective in 6 to 24 months.
Long - We expect to fully realize the  Partnership Construct’s Objective  in over 24 months.</description>
    <inlineHelpText>Short - We expect to realize the Partnership Construct’s Objective in under 6 months.
Medium - We expect to realize the Partnership Construct’s Objective in 6 to 24 months.
Long - We expect to fully realize the  Partnership Construct’s Objective  in over 24 months.</inlineHelpText>
    <label>Time Horizon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Short</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Long</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>