force-app/main/default/objects/Partnership_Objective__c/fields/Transaction_Volume_Timeframe_in_months__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Volume_Timeframe_in_months__c</fullName>
    <description>Projected number of months to realize the Transaction Volume target.</description>
    <inlineHelpText>Projected number of months to realize the Transaction Volume target.</inlineHelpText>
    <label>Transaction Volume Timeframe (in mon_DNU</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>