force-app/main/default/objects/Partnership_Objective__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This field is used by CSMs to separate Partner Objectives</description>
    <inlineHelpText>Keep the default for specific Partnership Objectives. Switch to Partner Metrics Tracking to track starting and current metrics.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Objective Tracking</fullName>
            </value>
            <value>
                <fullName>Partner Metrics Tracking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>