force-app/main/default/objects/Partnership_Objective__c/fields/USDC_on_Platform_Timeframe_in_months__c.field-meta.xml
<CustomField>
    <fullName>USDC_on_Platform_Timeframe_in_months__c</fullName>
    <description>Projected number of months to realize the Projected USDC on Platform target.</description>
    <inlineHelpText>Projected number of months to realize the Projected USDC on Platform target.</inlineHelpText>
    <label>USDC on Platform Timeframe (in mon_DNU</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>