force-app/main/default/objects/Partnership_Objective__c/validationRules/Needs_Deal_Construct_If_has_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Needs_Deal_Construct_If_has_Opportunity</fullName>
    <active>false</active>
    <description>Deal construct required if opportunity is filled</description>
    <errorConditionFormula>AND(
   !ISBLANK(Opportunity__c),
   ISBLANK(Deal_Construct__c)
)</errorConditionFormula>
    <errorMessage>Deal Construct Is Required If An Opportunity Is Linked</errorMessage>
</ValidationRule>