force-app/main/default/objects/Partnership_Objective__c/validationRules/Needs_Objective.validationRule-meta.xml
<ValidationRule>
    <fullName>Needs_Objective</fullName>
    <active>false</active>
    <description>Either Liquidity Or Wallet Growth Must Be Selected</description>
    <errorConditionFormula>AND(
Circle_Mint_T_C__c = false,
of_Referrals_Onboarded__c = false,
Stablecoins_Issued__c = false,
MEW_Growth__c = false,
Liquidity__c = false,
$Profile.Name != &apos;System Administrator&apos;
)</errorConditionFormula>
    <errorMessage>You must select an objective</errorMessage>
</ValidationRule>