force-app/main/default/objects/Partnership_Objective__c/listViews/BD_Partnership_Objectives.listView-meta.xml
<ListView>
    <fullName>BD_Partnership_Objectives</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Objective_Start_Date__c</columns>
    <columns>Contract_End_Date__c</columns>
    <columns>Objective_Status__c</columns>
    <columns>Performance_Objective_Health__c</columns>
    <columns>Objective_Health_Reason__c</columns>
    <columns>Objective_Health_Reason_Details__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Logged_in_BD__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>BD Partnership Objectives</label>
</ListView>