force-app/main/default/objects/Partnership_Objective__c/listViews/My_Partnership_Objectives.listView-meta.xml
<ListView>
    <fullName>My_Partnership_Objectives</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Objective_Start_Date__c</columns>
    <columns>Contract_End_Date__c</columns>
    <columns>Objective_Status__c</columns>
    <columns>Performance_Objective_Health__c</columns>
    <columns>Objective_Health_Reason__c</columns>
    <columns>Objective_Health_Reason_Details__c</columns>
    <columns>Success_Metrics__c</columns>
    <columns>Success_Metrics_Details__c</columns>
    <columns>Success_Metrics_Tracking__c</columns>
    <columns>Report_to_Post_Deal_Dashboard__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Contract_End_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>My Partnership Objectives</label>
</ListView>