force-app/main/default/objects/Partnership_Objective__c/listViews/My_Partnership_Objectives_CSM_Home_Page.listView-meta.xml
<ListView>
    <fullName>My_Partnership_Objectives_CSM_Home_Page</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Contract_End_Date__c</columns>
    <columns>Objective_Description__c</columns>
    <columns>Performance_Objective_Health__c</columns>
    <columns>Most_Recent_Note__c</columns>
    <columns>Most_Recent_Note_Date__c</columns>
    <columns>Objective_Start_Date__c</columns>
    <columns>Objective_End_Date__c</columns>
    <columns>Objective_Status__c</columns>
    <columns>Objective_Health_Reason__c</columns>
    <columns>Objective_Health_Reason_Details__c</columns>
    <columns>Report_to_Post_Deal_Dashboard__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Objective Tracking</value>
    </filters>
    <filters>
        <field>Objective_End_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>$user</value>
    </filters>
    <label>My Partnership Objectives (PM Home Pg)</label>
</ListView>